k8s/staging/app.yaml
# Deployment for Next.js app in Staging
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-topia-staging-deployment
  namespace: staging
  labels:
    app: ui-topia-staging
    environment: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-topia-staging
  template:
    metadata:
      labels:
        app: ui-topia-staging
        environment: staging
    spec:
      containers:
        - name: ui-topia-staging
          image: omerbenda98/ui_topia:4
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ui-topia-staging-service
  namespace: staging
  labels:
    environment: staging
spec:
  selector:
    app: ui-topia-staging
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
---
